Removed launch4j dependencies.